Bugs tests on ios

--- a/css/parallax.css
+++ b/css/parallax.css
@@ -50,6 +50,7 @@
     padding: 180px 100px 20px 0;
     width: 100%;
     height: 100vh;
+    transform: translateZ(0px);
 }
 
 .info-panel h1,
